[package]
name = "youtubedownloader"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }# reqwest with JSON parsing support
futures = "0.3" # for our async / await blocks
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime
serde_json = { version = "1.0.1", default-features = false, features = ["alloc"] }
serde = "1.0.217"
anyhow = "1.0.95"
clap = { version = "4.5.28", features = ["derive"] }
log = "0.4.22"
regex = "1.11.1"
url = "2.5.4"
env_logger = "0.11.6"
indicatif = "0.17.11"
